# projects

C++/edo_connect4/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
C++/edo_connect4/config/: params.yaml
C++/edo_connect4/include/: connect4.h  connect4_graph.h  jokes_db.h
C++/edo_connect4/launch/: connect4_battle_client.launch  connect4_battle_services.launch  connect4_battle_simulation.launch  connect4_client.launch  connect4_services.launch  connect4_simulation.launch  dialogflow.launch
C++/edo_connect4/scripts/: aruco_dice.py  connect4_board_detector.py  connect4_detector.py  connect4_filter.py  connect4_state_server.py  dialogflow_client.py  gcloud_keys.json  mic_client.py  new_key.json  player_detector.py  player_detector_server.py  return_joint_state.py  speak_server.py
C++/edo_connect4/src/: connect4.cpp  connect4_graph.cpp  connect4_monte_carlo.cpp  edo_connect4_interactive.cpp  edo_connect4_node.cpp  joint_storage.cpp  synthesiser.cpp
C++/edo_connect4/srv/: Connect4State.srv  DialogFlow.srv  Dice.srv  EdoSpeak.srv  GetJointStates.srv  ModelUpdate.srv  PlayerDetector.srv
C++/edo_connect4/test/: connect4_test.cpp
C++/edo_hanoi/: .gitignore  CMakeLists.txt  README.md  package.xml
C++/edo_hanoi/include/: hanoi.h
C++/edo_hanoi/launch/: hanoi_client.launch  hanoi_services.launch  hanoi_simulation.launch
C++/edo_hanoi/src/: canny_detector.py  column_detector.py  detector_test.py  edo_hanoi_node.cpp  hanoi.cpp  hanoi_state_server.py  neural_detector.py  vision_node.py
C++/edo_hanoi/src/neural/: README.md  cnn.model  groundtruth.csv  img_save.py  network.py  random_gen.py  test.csv  train.csv  train.py
C++/edo_hanoi/srv/: HanoiState.srv
ReactNodeJS/Internship/: Dockerfile  README.md
ReactNodeJS/Internship/backend/: README.md  index.js  package-lock.json  package.json
ReactNodeJS/Internship/backend/config/: default.json
ReactNodeJS/Internship/backend/src/: api.js  config.js  middlewares.js
ReactNodeJS/Internship/backend/src/controllers/: auth.js  company.js  elasticSearch.js  job.js  jobApplication.js  movie.js  project.js  user.js
ReactNodeJS/Internship/backend/src/models/: account.js  company.js  companySchema-ES.json  emailConfirmation.js  job.js  jobApplication.js  projectSchema-ES.json  registrationEmail.js  userProfile.js  userSchema-ES.json
ReactNodeJS/Internship/backend/src/routes/: auth.js  company.js  job.js  jobApplication.js  project.js  uploadImage.js  user.js
ReactNodeJS/Internship/database/: README.md
ReactNodeJS/Internship/database/dump/wayerdb/: accounts.bson  accounts.metadata.json  companies.bson  companies.metadata.json  jobapplications.bson  jobapplications.metadata.json  jobs.bson  jobs.metadata.json  userprofiles.bson  userprofiles.metadata.json
ReactNodeJS/Internship/frontend/: README.md  package-lock.json  package.json  webpack.common.js  webpack.dev.js
ReactNodeJS/Internship/frontend/config/: default.json
ReactNodeJS/Internship/frontend/src/: App.js  index.html  index.js
ReactNodeJS/Internship/frontend/src/components/: CompOnboardStep1.js  CompOnboardStep2.js  CompOnboardStep3.js  CompanyLogin.js  CompanyOnboarding.js  CompanySearch.js  CompanySearchResults.js  Footer.js  Header.js  HeaderOld.js  HomePage.js  HomePageCompany.js  HomePageRP.js  MatchingResults.js  NewProject.js  Page.js  ProjectDetails.js  ProjectSearch.js  ProjectSearchResults.js  ProjectsList.js  UserContact.js  UserDetails.js  UserLogin.js  UserProfile.js  UserSignup.js
ReactNodeJS/Internship/frontend/src/scss/: custom.css
ReactNodeJS/Internship/frontend/src/services/: CompanyService.js  HttpService.js  ProjectService.js  UserService.js
ReactNodeJS/Internship/frontend/src/views/: AboutUsView.js  CompanyOnboardingView.js  CompanySearchView.js  CompanySignUpView.js  ConfirmEmailView.js  HomePageView.js  ImpressumView.js  LoginView.js  MatchingResultsView.js  NewProjectView.js  PrivacyView.js  ProjectDetailView.js  ProjectSearchView.js  ProjectsListView.js  UserContactView.js  UserDetailView.js  UserProfileView.js
ReactNodeJS/Internship/python_backend/: Dockerfile  backend_businesslogic.py  backend_data.py  backend_service.py  dps-batches-batch5-4fc777a5c6b8--wayer.json  requirements.txt  setup.py
ReactNodeJS/LeasIT/LeazIt_Backend/: .gitignore  README.md  helpers.js  index.js  package-lock.json  package.json
ReactNodeJS/LeasIT/LeazIt_Backend/src/: api.js  config.js  helpers.js  middlewares.js  role_constants.js
ReactNodeJS/LeasIT/LeazIt_Backend/src/controllers/: auth.js  booking.js  category.js  chat.js  conversation.js  file.js  item.js  itemEvaluation.js  message.js  photo.js  user.js  userEvaluation.js
ReactNodeJS/LeasIT/LeazIt_Backend/src/models/: booking.js  category.js  conversation.js  file.js  item.js  itemEvaluation.js  message.js  message_old.js  photo.js  user.js  userEvaluation.js
ReactNodeJS/LeasIT/LeazIt_Backend/src/routes/: booking.js  category.js  (+8 more)
ReactNodeJS/LeasIT/LeazIt_Frontend/: .gitignore  package.json  webpack.common.js
ReactNodeJS/LeasIT/LeazIt_Frontend/anyar/: index.html
ReactNodeJS/LeasIT/LeazIt_Frontend/src/: App.js  index.html  index.js
python/DeepLearningThesis/trajectory_validation-SOCIAL_MLP_COMPLETED/: README.md  main.py  plot.py  statistics.py  util.py
python/DeepLearningThesis/trajectory_validation-SOCIAL_MLP_COMPLETED/data_loaders/: eth_data_loader.py  loader_arxiepiskopi.py  ngsim_data_loader.py
python/DeepLearningThesis/trajectory_validation-SOCIAL_MLP_COMPLETED/models/: mlp_lstm.py  no_feed.py  relu_rnn.py  test_model.py  vlstm.py  vlstm_model.py
python/DeepLearningThesis/trajectory_validation-SOCIAL_MLP_COMPLETED/training/: std_train.py
(+102 files in other folders)
